--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "homepage": "https://github-deploy",
+  "homepage": "",
   "dependencies": {
     "gh-pages": "^3.2.3"
   }
